[gd_scene load_steps=11 format=1]

[ext_resource path="res://scenes/WorldMap/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://Map.png" type="Texture" id=2]
[ext_resource path="res://completed.png" type="Texture" id=3]
[ext_resource path="res://fonts/import/PressStart2P_10_white.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scenes/WorldMap/deleteSaveButton.gd" type="Script" id=5]
[ext_resource path="res://scripts/Level1LifeButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/Level1AttackButton.gd" type="Script" id=7]
[ext_resource path="res://scripts/Level1MagicButton.gd" type="Script" id=8]
[ext_resource path="res://scenes/WorldMap/Button/CheckButton.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="WorldMap" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 540.0
custom_styles/panel = SubResource( 1 )

[node name="Level1" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 490.0
margin/right = 89.0
margin/bottom = 539.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 1"
icon = ExtResource( 3 )
flat = false

[node name="clear save" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 836.0
margin/top = 499.0
margin/right = 958.0
margin/bottom = 539.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete Save"
flat = false
script/script = ExtResource( 5 )

[node name="Level1Life" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 756.0
margin/top = 125.0
margin/right = 836.0
margin/bottom = 175.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Life"
flat = false
script/script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Level1Life"]

visibility/visible = false
transform/pos = Vector2( 110, 24.5 )
texture = ExtResource( 3 )

[node name="LevelBoss" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 413.0
margin/top = 172.0
margin/right = 493.0
margin/bottom = 222.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Boss"
flat = false

[node name="Level1Attack" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 166.0
margin/right = 196.0
margin/bottom = 215.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack"
flat = false
script/script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Level1Attack"]

visibility/visible = false
transform/pos = Vector2( 110, 24.5 )
texture = ExtResource( 3 )

[node name="Level1Magic" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 417.0
margin/top = 434.0
margin/right = 497.0
margin/bottom = 484.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Magic"
flat = false
script/script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Level1Magic"]

visibility/visible = false
transform/pos = Vector2( 110, 24 )
texture = ExtResource( 3 )

[node name="Instructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 524.0
margin/right = 324.0
margin/bottom = 572.0
custom_fonts/font = ExtResource( 4 )
text = "Press 'I' to see instructions."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckButton" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]

[connection signal="pressed" from="clear save" to="Level1Life" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="Level1Attack" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="Level1Magic" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="clear save" method="_on_clear_save_pressed"]

[connection signal="pressed" from="Level1Life" to="." method="_on_Level1Life_pressed"]

[connection signal="pressed" from="LevelBoss" to="." method="_on_LevelBoss_pressed"]

[connection signal="pressed" from="Level1Attack" to="." method="_on_Level1Attack_pressed"]

[connection signal="pressed" from="Level1Magic" to="." method="_on_Level1Magic_pressed"]


