[gd_scene load_steps=32 format=1]

[ext_resource path="res://scenes/WorldMap/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://scenes/WorldMap/imports/Map_Vincent.tex" type="Texture" id=2]
[ext_resource path="res://completed.png" type="Texture" id=3]
[ext_resource path="res://fonts/import/PressStart2P_10_white.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scenes/WorldMap/deleteSaveButton.gd" type="Script" id=5]
[ext_resource path="res://scenes/WorldMap/Button/CheckButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/WorldMap/imports/Castle.tex" type="Texture" id=7]
[ext_resource path="res://scripts/Level1LifeButton.gd" type="Script" id=8]
[ext_resource path="res://scenes/WorldMap/imports/boss.tex" type="Texture" id=9]
[ext_resource path="res://scripts/BossButton.gd" type="Script" id=10]
[ext_resource path="res://scripts/Level1AttackButton.gd" type="Script" id=11]
[ext_resource path="res://scripts/Level1MagicButton.gd" type="Script" id=12]
[ext_resource path="res://scenes/WorldMap/imports/overlay.tex" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=16]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 13 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="WorldMapEasy" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 540.0
custom_styles/panel = SubResource( 1 )

[node name="Level1" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 490.0
margin/right = 89.0
margin/bottom = 539.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 1"
icon = ExtResource( 3 )
flat = false

[node name="clear save" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 836.0
margin/top = 499.0
margin/right = 958.0
margin/bottom = 539.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete Save"
flat = false
script/script = ExtResource( 5 )

[node name="CheckButton" parent="." instance=ExtResource( 6 )]

margin/left = 374.0
margin/top = 22.0
margin/right = 540.0
margin/bottom = 44.0

[node name="Level1Life" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 651.0
margin/top = 127.0
margin/right = 760.0
margin/bottom = 228.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = true
script/script = ExtResource( 8 )

[node name="LevelBoss" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 418.0
margin/top = 50.0
margin/right = 524.0
margin/bottom = 154.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = true
script/script = ExtResource( 10 )

[node name="Level1Attack" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 126.0
margin/right = 210.0
margin/bottom = 227.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = true
script/script = ExtResource( 11 )

[node name="Level1Magic" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 424.0
margin/top = 258.0
margin/right = 533.0
margin/bottom = 359.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = true
script/script = ExtResource( 12 )

[node name="Instructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 524.0
margin/right = 324.0
margin/bottom = 572.0
custom_fonts/font = ExtResource( 4 )
text = "Press 'I' to see instructions."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Grid" type="Panel" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 540.0
custom_styles/panel = SubResource( 2 )

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]

[connection signal="pressed" from="clear save" to="Level1Magic" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="clear save" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="Level1Life" method="_on_clear_save_pressed"]

[connection signal="pressed" from="clear save" to="Level1Attack" method="_on_clear_save_pressed"]

[connection signal="mouse_enter" from="Level1Life" to="Level1Life" method="_on_Level1Life_mouse_enter"]

[connection signal="mouse_exit" from="Level1Life" to="Level1Life" method="_on_Level1Life_mouse_exit"]

[connection signal="pressed" from="Level1Life" to="." method="_on_Level1Life_pressed"]

[connection signal="mouse_enter" from="LevelBoss" to="LevelBoss" method="_on_LevelBoss_mouse_enter"]

[connection signal="mouse_exit" from="LevelBoss" to="LevelBoss" method="_on_LevelBoss_mouse_exit"]

[connection signal="pressed" from="LevelBoss" to="." method="_on_LevelBoss_pressed"]

[connection signal="mouse_enter" from="Level1Attack" to="Level1Attack" method="_on_Level1Attack_mouse_enter"]

[connection signal="mouse_exit" from="Level1Attack" to="Level1Attack" method="_on_Level1Attack_mouse_exit"]

[connection signal="pressed" from="Level1Attack" to="." method="_on_Level1Attack_pressed"]

[connection signal="mouse_enter" from="Level1Magic" to="Level1Magic" method="_on_Level1Magic_mouse_enter"]

[connection signal="mouse_exit" from="Level1Magic" to="Level1Magic" method="_on_Level1Magic_mouse_exit"]

[connection signal="pressed" from="Level1Magic" to="." method="_on_Level1Magic_pressed"]


